--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-datasource.host=localhost
-datasource.port=3309
+#datasource.host=localhost
+#datasource.port=3309
+datasource.host=mysqlhost
+datasource.port=3306
 datasource.database=dev
 datasource.username=dev
 datasource.password=secret
