--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,22 @@ services:
       MYSQL_USER: dev
       MYSQL_PASSWORD: secret
     networks:
-      - database
+      - database_link
 
   servicepoller:
     image: com.kry/service-poller
     build:
       context: .
       dockerfile: ./Dockerfile
+    restart_policy:
+      condition: on-failure
     ports:
       - "8080:8080"
     networks:
-      - database
+      - database_link
     depends_on:
       - database
+      - database_link
 
 # Use this if you want to initialize the db using a init.sql on container startup. Replace "./server/init.sql" with the path to your init.sql.
 #    volumes:
@@ -33,5 +36,5 @@ volumes:
   dbdata:
 
 networks:
-  database:
+  database_link:
     driver: bridge
